# bookstore

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  conftest.py  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
bookstore/bookstore/: settings.py
order/: factories.py
order/migrations/: 0001_initial.py  0002_rename_product_order_products.py  0003_rename_products_order_product.py
order/models/: order.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py  views.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
